--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 5px;
+  margin-bottom: 5px #111;
 }
 
 .subtitle {
@@ -24,12 +24,15 @@ h1 {
   color: #555;
 }
 
+
+
 .links a {
-  color: #0066cc;
+  color: #c2185b;
   text-decoration: none;
 }
 
 .links a:hover {
+  color: #a31545;
   text-decoration: underline;
 }
 
@@ -38,7 +41,7 @@ section {
 }
 
 h2 {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #111;
   padding-bottom: 5px;
 }
 
